After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778301 - GtkTooltip doesn't clear source ID in all circumstances
GtkTooltip doesn't clear source ID in all circumstances
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.89.x
Other Linux
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-02-07 18:08 UTC by olof
Modified: 2017-06-06 12:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Potential fix. (1.32 KB, patch)
2017-02-07 18:08 UTC, olof
accepted-commit_now Details | Review

Description olof 2017-02-07 18:08:47 UTC
Created attachment 345130 [details] [review]
Potential fix.

This is likely only visible from a GC'ed language, but causes quite a lot of warnings there in case the GtkTooltip object is being kept alive for longer than anticipated when the timer in timeout_id runs out.

This is already acknowledged and being worked around according to the comment in tooltip_popup_timeout ("This usually doesn't happen..."), but can be easily fixed by removing and zeroing the field more aggressively, see the attached patch.

I'm not sure whether the exact place and whether the second call for the GdkDisplay "closed" signal is necessary/correct, I observed no ill effects with this patch applied though.
Comment 1 Matthias Clasen 2017-02-15 23:24:04 UTC
Review of attachment 345130 [details] [review]:

looks fine to me